--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
         <div class="page" id="p2">
             <div class="img-area">
-                <img src="annem.jpg" alt="">
+                <img src="annem123321.jpg" alt="">
             </div>
             <div class="text-area">
                 <h1>Seninle Her An</h1>
@@ -177,7 +177,7 @@
 
         <div class="page" id="p3">
             <div class="img-ares">
-                <img src="annem2.jpeg" alt="">
+                <img src="annem123.jpeg" alt="">
             </div>
             <div class="text-area">
                 <h1>Güçlü Kadın</h1>
@@ -246,4 +246,5 @@
     </script>
 
 </body>
+
 </html>
