--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
         <div class="page" id="p2">
             <div class="img-area">
-                <img src="annem123321.jpg" alt="">
+                <img src="annem123321.jpeg" alt="">
             </div>
             <div class="text-area">
                 <h1>Seninle Her An</h1>
@@ -248,3 +248,4 @@
 </body>
 
 </html>
+
